# pySurgery

./: .bumpversion.cfg  .gitignore  AGENTS.md  CITATION.cff  MANIFEST.in  Manifest.toml  README.md  escape_underscores.py  fix_assembly_map.py  fix_bridge.py  fix_julia_ends.py  move_method.py  pyproject.toml  scratch.py  test_graph.py  test_out.txt  test_out_2.txt  test_out_3.txt  test_out_inv.txt  test_triangulations.py
.github/workflows/: build-dist.yml  lint.yml  publish-pypi.yml  tests.yml
.hypothesis/constants/: 0570a7c52cd987f9  0736e2d4acddd01a  0cfa12dfbf9e9abb  0d65a410db824952  0f23f962987bc983  1138d7294b3547b0  157cebd5793c3990  15dc93e20a284cee  15f998fddd6c37c7  1cce0c53a0aa1633  1cea7673575196d2  1e45e7f763409ef1  1e75611ae673189f  1f635bd54719bf38  21e745b8a2273eaf  2648d3e32b9f30e3  2bb0f3a0ab6285e1  2d7ca5a0f7d31ecb  2f1b42cfdc505c90  2f49888d399714a6  2fda912527187aee  32f0c419f20d190d  33327d908d802f23  3699c4b302c76d19  375e996620efe363  386a97ac85b46227  3910bb65044233b3  3c21ad905fb5706b  3c72999b5f85b659  3d2fd881a992f922  3e82ec3f36e42836  3ed1072236185677  44971ea411745967  491b9127715c5b2b  495022fa95338713  4974e3e8362d5935  49dbff769e7e1ccb  4a4a8a85179b27a7  4ad846376b5694ae  4bb48112bcba09ce  (+86 more)
docs/: discrete_surgery_dim_le_2.md  tutorial_coverage.json  tutorial_coverage.yaml
examples/: 01_basic_homology_and_cohomology.ipynb  01_basic_homology_and_cohomology.py  01_orientation_and_mental_model.ipynb  02_building_spaces_simplicial_and_cw.ipynb  02_intersection_forms.ipynb  02_intersection_forms.py  03_algebraic_surgery.ipynb  03_algebraic_surgery.py  03_chain_complexes_and_homology_from_scratch.ipynb  04_advanced_tda_and_surgery_theory.ipynb  04_cohomology_cup_products_and_intuition.ipynb  05_exact_algebra_engine_room.ipynb  05_omni_dimensional_homeomorphisms.ipynb  05_omni_dimensional_homeomorphisms.py  06_exact_sparse_snf_julia_backend.ipynb  06_gudhi_interoperability_and_roundtrip.ipynb  06_kirby_calculus_and_characteristic_classes.ipynb  07_fundamental_group_and_structure_set.ipynb  07_intersection_forms_explained.ipynb  08_certificate_workflows.ipynb  08_quadratic_forms_and_stabilization_patterns.ipynb  09_branch_matrix_and_failure_modes.ipynb  09_fundamental_group_and_group_ring_basics.ipynb  10_k_theory_and_bass_heller_swan_workflows.ipynb  10_witness_builder_reference.ipynb  11_capstone_end_to_end_workflow.ipynb  11_wall_groups_and_obstruction_primer.ipynb  12_algebraic_surgery_step_by_step.ipynb  12_cube_surgery.ipynb  12_topological_denoising_via_surgery.ipynb  12_torus_surgery.ipynb  13_homology_generators_small_figures.ipynb  13_structure_sets_and_exact_sequence_navigation.ipynb  14_homeomorphism_decision_api_deep_dive.ipynb  15_certificate_workflows_from_intermediate_evidence.ipynb  16_witness_builder_and_decision_ready_paths.ipynb  17_embedding_and_immersion_practical_whitney.ipynb  18_intrinsic_dimension_estimators_in_context.ipynb  19_uniformization_for_surfaces_discrete_conformal.ipynb  20_geometrization_3d_heuristics_and_certificates.ipynb  (+19 more)
examples/old_examples/: 01_basic_homology_and_cohomology.ipynb  04_advanced_tda_and_surgery_theory.ipynb  05_omni_dimensional_homeomorphisms.ipynb  06_kirby_calculus_and_characteristic_classes.ipynb  07_fundamental_group_and_structure_set.ipynb  09_branch_matrix_and_failure_modes.ipynb  11_capstone_end_to_end_workflow.ipynb  12_cube_surgery.ipynb  13_homology_generators_small_figures.ipynb
pysurgery/: __init__.py  algebraic_poincare.py  algebraic_surgery.py  auto_surgery.py  coverage_matrix.yaml  homeomorphism.py  homeomorphism_witness.py  scratch.py  structure_set.py  surgery.py  topoview.py  wall_groups.py
pysurgery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pysurgery/adams/: __init__.py  differentials.py  e_infinity_exhaustive.py  e_infinity_resolver.py  extension_solver.py  interactive_resolver.py  lambda_algebra.py  lean_resolver.py  odd_prime_cobar.py  spectral_sequence.py  u_resolution.py  unstable.py
pysurgery/algebra/: __init__.py  exact_algebra.py  exact_sequences.py  exact_snf_julia.py  group_rings.py  intersection_forms.py  k_theory.py  math_core.py  quadratic_forms.py
pysurgery/bridge/: __init__.py  julia_bridge.py  juliapkg.json  surgery_backend.jl
scripts/: benchmark_pi1_modes.py  setup_hooks.sh  validate_cocone_on_real_tori.py  validate_tutorial_coverage.py
tests/: conftest.py  debug_k1.py  discrete_surface_data.py  strategies.py  test_3_manifolds.py  test_4_manifolds.py  test_adams_bound_tightening.py  test_adams_differentials.py  test_adams_e2_page.py  test_adams_extension_solver.py  test_adams_u_resolution.py  test_advanced_surfaces.py  test_algebraic_poincare.py  test_algebraic_surgery.py  test_alpha_complex.py  test_auto_surgery_contractible.py  test_auto_surgery_detection.py  test_auto_surgery_kill.py  test_auto_surgery_obstruction.py  test_auto_surgery_separate.py  test_auto_surgery_unlink.py  test_backend_consistency.py  test_backend_consistency_comprehensive.py  test_basis_change.py  test_canonical_spaces_and_homotopy.py  test_characteristic_classes.py  test_cobordism_complex.py  test_cocone_tangential_backend_consistency.py  test_complexes.py  test_concatenate_glue_reuse.py  test_connected_component_optimization.py  test_controlled_cohomology.py  test_coverings.py  test_cup_product.py  test_decision_key_shared.py  test_delaunay_filtration.py  test_dynamic_complexes.py  test_e_infinity_resolution.py  test_embedding.py  test_exact_algebra.py  (+91 more)
(+95 files in other folders)
