[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysurgery"
version = "1.7.9"
description = "A high-performance Python library for Computational Surgery Theory."
dependencies = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
    "numba>=0.65.0",
    "pydantic>=2.13.2",
    "juliacall>=0.9.22"
]
authors = [
  { name = "Gabriel Ribeiro", email = "gabriel.ribeiro@dcc.ufmg.br" }
]
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
tda = ["gudhi"]
mesh = ["trimesh"]
ml = ["jax", "jaxlib", "torch", "torch_geometric"]
test = ["pytest", "hypothesis>=6.152.1"]
all = ["gudhi", "trimesh", "jax", "jaxlib", "torch", "torch_geometric", "pytest", "hypothesis>=6.152.1", 'plotly']

[tool.setuptools.packages.find]
where = ["."]
include = ["pysurgery*"]

[tool.setuptools.package-data]
"*" = ["*.jl", "*.yaml", "*.json"]

