[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysurgery"
version = "2.3.5"
description = "A high-performance Python library for Computational Surgery Theory."
dependencies = [
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
    "numba>=0.65.0",
    "pydantic>=2.13.2",
    "juliacall>=0.9.22",
    "networkx>=3.0",
    "matplotlib>=3.7.0"
]
authors = [
  { name = "Gabriel Ribeiro", email = "gabriel.ribeiro@dcc.ufmg.br" }
]
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
mesh = ["trimesh"]
ml = ["jax", "jaxlib", "torch", "torch_geometric"]
test = ["pytest", "hypothesis>=6.152.1"]
lint = ["ruff>=0.15"]
all = ["trimesh", "jax", "jaxlib", "torch", "torch_geometric", "pytest", "hypothesis>=6.152.1", 'plotly']

[tool.setuptools.packages.find]
where = ["."]
include = ["pysurgery*"]

# ──────────────────────────────────────────────────────────────────────────────
# Docstring linter (ruff / pydocstyle, Google convention)
#
#   ruff check pysurgery/            # lint docstrings
#   ruff check pysurgery/ --fix      # apply the safe auto-fixes
#
# The package standard is Google-style docstrings (summary + Args/Returns/Raises,
# enriched with Overview/Algorithm/Use When/Example/Attributes). This selects only
# the pydocstyle "D" rules so `ruff check` is a dedicated docstring gate; add
# "E"/"F" to `select` if you also want general linting.
[tool.ruff]
target-version = "py311"
# Exclude notebooks from all ruff checks.
# Patterns without slashes are matched against the name of the file or directory.
exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "venv",
    "**/*.ipynb",
]

[tool.ruff.lint]
select = ["D"]
ignore = [
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package (__init__.py)
    "D105",  # missing docstring in magic method (__repr__, __eq__, ...)
    "D107",  # missing docstring in __init__ (documented at the class level)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests and helper scripts are not part of the documented public API.
"tests/**" = ["D"]
"scripts/**" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["examples", "experiments", "build", "dist", ".git", ".github", ".hypothesis", ".ruff_cache", ".pytest_cache"]
python_files = ["test_*.py"]

[tool.setuptools.package-data]
"*" = ["*.jl", "*.yaml", "*.json"]

[tool.bumpversion]
current_version = "2.3.5"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
filename = "pysurgery/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

